--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,37 @@
 # Core Bot Framework
 python-telegram-bot==20.7
-aiogram==3.3.0
 
 # Web Framework
 Flask==3.0.0
 Flask-Login==0.6.3
-Flask-WTF==1.2.1
 
 # Database
-SQLAlchemy==2.0.23
+# SQLite is built-in, no package needed
 
-# Music & Media
+# Music & Media (Lightweight versions)
 yt-dlp==2023.12.30
-pytube==15.0.0
 
-# Translation
-googletrans==4.0.0rc1
+# Translation (Fixed version)
 deep-translator==1.11.4
 
 # Utilities
 python-dotenv==1.0.0
 schedule==1.2.0
-pytz==2023.3
+pytz==2023.3.post1
 requests==2.31.0
 beautifulsoup4==4.12.2
-Pillow==10.1.0
 
-# Data Processing
-pandas==2.1.4
-numpy==1.26.2
+# Data Processing (Lighter versions)
+# pandas and numpy removed for free tier compatibility
 
 # Web Server
 gunicorn==21.2.0
-uvicorn==0.25.0
 
 # Security
-cryptography==41.0.7
 PyJWT==2.8.0
 
 # Async Support
 aiohttp==3.9.1
-asyncio==3.4.3
 
 # Logging
 colorlog==6.8.0
